--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@tanstack/react-query": "^5.8.7",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
