--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.8.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
   },
